# controller/admin_login.go
@@ -1,0 +1,36 @@
+package controller
+
+import (
+	"github.com/anthonyzero/gateway/dto"
+	"github.com/anthonyzero/gateway/middleware"
+	"github.com/gin-gonic/gin"
+)
+
+type AdminLoginController struct{}
+
+//路由注册
+func AdminLoginRegister(group *gin.RouterGroup) {
+	adminLogin := &AdminLoginController{}
+	group.POST("/login", adminLogin.Login)
+}
+
+// login godoc
+// @Summary 管理员登陆
+// @Description 管理员登陆
+// @Tags 管理员接口
+// @ID /admin_login/login
+// @Accept  json
+// @Produce  json
+// @Param body body dto.AdminLoginInput true "body"
+// @Success 200 {object} middleware.Response{data=dto.AdminLoginOutput} "success"
+// @Router /admin_login/login [post]
+func (adminLogin *AdminLoginController) Login(c *gin.Context) {
+	params := &dto.AdminLoginInput{}
+	if err := params.BindValidParam(c); err != nil {
+		//参数校验失败
+		middleware.ResponseError(c, middleware.ParamCheckErrorCode, err)
+		return
+	}
+	out := &dto.AdminLoginOutput{Token: params.UserName}
+	middleware.ResponseSuccess(c, out)
+}
