# dto/admin_login.go
@@ -1,0 +1,21 @@
+package dto
+
+import (
+	"github.com/anthonyzero/gateway/public"
+	"github.com/gin-gonic/gin"
+)
+
+//登录输入参数
+type AdminLoginInput struct {
+	UserName string `json:"username" form:"username" comment:"管理员用户名" example:"admin" validate:"required,valid_username"` //管理员用户名
+	Password string `json:"password" form:"password" comment:"密码" example:"123456" validate:"required"`                   //密码
+}
+
+//登录输出
+type AdminLoginOutput struct {
+	Token string `json:"token" form:"token" comment:"token" example:"token" validate:""` //token
+}
+
+func (param *AdminLoginInput) BindValidParam(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, param)
+}
